@@ -1,3 +1,6 @@
+[B]Version v2.4.7[/B]
+- Fixed error occurring during metadata retrieval. Thanks to nhr594(xbmc user).
+
 [B]Version v2.4.6[/B]
 - Handled exceptional crash of metahandler for Eden users.
 - Added support for resolving video item at runtime. Lazy loading of video info.
